# Tetris-SFML

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
resources/: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  GameBackground.cpp  GameController.cpp  GameStats.cpp  GameUI.cpp  InputHandler.cpp  Playfield.cpp  Tetromino.cpp  TetrominoManager.cpp  TetrominoShape.cpp  TileManager.cpp  TileManager.h  UIRenderer.cpp  main.cpp
src/const/: Enums.h  GameConfig.h  GameStates.h  TetrominoConst.h  TetrominoConstants.h  Tile.h  TileConst.h  TileConstants.h  colors.h
src/include/: Game.h  GameBackground.h  GameController.h  GameStats.h  GameUI.h  InputHandler.h  Playfield.h  Tetromino.h  TetrominoManager.h  TetrominoShape.h  TileManager.h  UIRenderer.h
